[gd_scene load_steps=9 format=3 uid="uid://dcry0lwlfq1d6"]

[ext_resource type="Script" path="res://ui/screens/network/lobby/lobby.gd" id="1_rw0ao"]
[ext_resource type="PackedScene" uid="uid://cyvitp4i8k7hk" path="res://ui/screens/network/lobby/teams/LobbyTeams.tscn" id="2_7mjwf"]

[sub_resource type="LabelSettings" id="LabelSettings_hvff8"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_n3ruq"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_ogokj"]
font_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ypos"]
bg_color = Color(0.152941, 0.427451, 0.513726, 0.462745)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.237985, 0.534776, 0.515603, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="InputEventKey" id="InputEventKey_5whnk"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_2rsgc"]
events = [SubResource("InputEventKey_5whnk")]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rw0ao")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.237985, 0.534776, 0.515603, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="ServerConnection" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="ReturnButton" type="Button" parent="VBoxContainer/MarginContainer2/ServerConnection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Disconnect !"

[node name="Spacer" type="Control" parent="VBoxContainer/MarginContainer2/ServerConnection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LaunchGameButton" type="Button" parent="VBoxContainer/MarginContainer2/ServerConnection"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Can only be launched by the Host"
disabled = true
text = "Launch Game"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="ConnectedData" type="HSplitContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerList" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ConnectedData"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer/MarginContainer/ConnectedData/PlayerList"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerWidg" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ConnectedData/PlayerList/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="PlayerTitle" type="Label" parent="VBoxContainer/MarginContainer/ConnectedData/PlayerList/VSplitContainer/PlayerWidg"]
layout_mode = 2
text = "Players"
label_settings = SubResource("LabelSettings_hvff8")
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer/ConnectedData/PlayerList/VSplitContainer/PlayerWidg"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerList" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ConnectedData/PlayerList/VSplitContainer/PlayerWidg/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="TeamWidg" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ConnectedData/PlayerList/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TeamsTitle" type="Label" parent="VBoxContainer/MarginContainer/ConnectedData/PlayerList/VSplitContainer/TeamWidg"]
layout_mode = 2
text = "Teams"
label_settings = SubResource("LabelSettings_n3ruq")
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer/ConnectedData/PlayerList/VSplitContainer/TeamWidg"]
layout_mode = 2
size_flags_vertical = 3

[node name="LobbyTeams" parent="VBoxContainer/MarginContainer/ConnectedData/PlayerList/VSplitContainer/TeamWidg/ScrollContainer" instance=ExtResource("2_7mjwf")]
unique_name_in_owner = true
layout_mode = 2

[node name="Chat" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ConnectedData"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChatTitle" type="Label" parent="VBoxContainer/MarginContainer/ConnectedData/Chat"]
layout_mode = 2
text = "Chat"
label_settings = SubResource("LabelSettings_ogokj")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/ConnectedData/Chat"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="Panel" parent="VBoxContainer/MarginContainer/ConnectedData/Chat/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4ypos")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/ConnectedData/Chat/MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer/ConnectedData/Chat/MarginContainer/ColorRect/MarginContainer"]
layout_mode = 2

[node name="ChatContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ConnectedData/Chat/MarginContainer/ColorRect/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ConnectedData/Chat"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MessageLine" type="LineEdit" parent="VBoxContainer/MarginContainer/ConnectedData/Chat/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Chat with friends !"
clear_button_enabled = true
select_all_on_focus = true
caret_blink = true

[node name="SendMessageButton" type="Button" parent="VBoxContainer/MarginContainer/ConnectedData/Chat/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
shortcut = SubResource("Shortcut_2rsgc")
text = "Send !"
